@@ -16,6 +16,8 @@ package google.registry.beam.rde;
 
 import static com.google.common.base.Preconditions.checkArgument;
 import static com.google.common.base.Preconditions.checkState;
+import static com.google.common.collect.ImmutableList.toImmutableList;
+import static com.google.common.collect.ImmutableMap.toImmutableMap;
 import static com.google.common.collect.ImmutableSet.toImmutableSet;
 import static google.registry.beam.rde.RdePipeline.TupleTags.DOMAIN_FRAGMENTS;
 import static google.registry.beam.rde.RdePipeline.TupleTags.EXTERNAL_HOST_FRAGMENTS;
@@ -24,12 +26,12 @@ import static google.registry.beam.rde.RdePipeline.TupleTags.PENDING_DEPOSIT;
 import static google.registry.beam.rde.RdePipeline.TupleTags.REFERENCED_HOSTS;
 import static google.registry.beam.rde.RdePipeline.TupleTags.REVISION_ID;
 import static google.registry.beam.rde.RdePipeline.TupleTags.SUPERORDINATE_DOMAINS;
-import static google.registry.model.reporting.HistoryEntryDao.RESOURCE_TYPES_TO_HISTORY_TYPES;
 import static google.registry.persistence.transaction.TransactionManagerFactory.tm;
 import static google.registry.util.SafeSerializationUtils.safeDeserializeCollection;
 import static google.registry.util.SafeSerializationUtils.serializeCollection;
 import static google.registry.util.SerializeUtils.decodeBase64;
 import static google.registry.util.SerializeUtils.encodeBase64;
+import static org.apache.beam.sdk.values.TypeDescriptors.integers;
 import static org.apache.beam.sdk.values.TypeDescriptors.kvs;
 
 import com.google.common.collect.ImmutableList;
@@ -57,7 +59,6 @@ import google.registry.model.rde.RdeMode;
 import google.registry.model.registrar.Registrar;
 import google.registry.model.registrar.Registrar.Type;
 import google.registry.model.reporting.HistoryEntry;
-import google.registry.model.reporting.HistoryEntry.HistoryEntryId;
 import google.registry.persistence.PersistenceModule.TransactionIsolationLevel;
 import google.registry.persistence.VKey;
 import google.registry.rde.DepositFragment;
@@ -71,6 +72,7 @@ import jakarta.inject.Singleton;
 import java.io.IOException;
 import java.io.Serializable;
 import java.time.Instant;
+import java.util.NoSuchElementException;
 import org.apache.beam.sdk.Pipeline;
 import org.apache.beam.sdk.PipelineResult;
 import org.apache.beam.sdk.coders.KvCoder;
@@ -85,10 +87,13 @@ import org.apache.beam.sdk.transforms.Filter;
 import org.apache.beam.sdk.transforms.FlatMapElements;
 import org.apache.beam.sdk.transforms.Flatten;
 import org.apache.beam.sdk.transforms.GroupByKey;
+import org.apache.beam.sdk.transforms.GroupIntoBatches;
 import org.apache.beam.sdk.transforms.ParDo;
+import org.apache.beam.sdk.transforms.WithKeys;
 import org.apache.beam.sdk.transforms.join.CoGbkResult;
 import org.apache.beam.sdk.transforms.join.CoGroupByKey;
 import org.apache.beam.sdk.transforms.join.KeyedPCollectionTuple;
+import org.apache.beam.sdk.util.ShardedKey;
 import org.apache.beam.sdk.values.KV;
 import org.apache.beam.sdk.values.PCollection;
 import org.apache.beam.sdk.values.PCollectionList;
@@ -327,18 +332,17 @@ public class RdePipeline implements Serializable {
             .withCoder(KvCoder.of(StringUtf8Coder.of(), VarLongCoder.of())));
   }
 
-  private <T extends HistoryEntry> EppResource loadResourceByHistoryEntryId(
-      Class<T> historyEntryClazz, String repoId, Iterable<Long> revisionIds) {
+  private static long getSingleRevisionId(
+      Class<? extends HistoryEntry> historyEntryClazz, String repoId, Iterable<Long> revisionIds) {
     ImmutableList<Long> ids = ImmutableList.copyOf(revisionIds);
-    // The size should always be 1 because we are only getting one repo ID -> revision ID pair per
-    // repo ID from the source transform (the JPA query in the method above). But for some reason
-    // after CoGroupByKey (joining the revision IDs and the pending deposits on repo IDs), in
-    // #removedUnreferencedResources, duplicate revision IDs are sometimes introduced. Here we
-    // attempt to deduplicate the iterable. If it contains multiple revision IDs that are NOT the
-    // same, we have a more serious problem as we cannot be sure which one to use. We should use the
-    // highest revision ID, but we don't even know where it comes from, as the query should
-    // definitively only give us one revision ID per repo ID. In this case we have to abort and
-    // require manual intervention.
+    // The SQL query in getMostRecentHistoryEntries guarantees exactly one (repoId, revisionId) pair
+    // per entity. However, after multi-way joins via CoGroupByKey (e.g. when joining pending
+    // deposits or subordinate hosts on repoId), duplicate identical revision IDs can appear in
+    // the resulting Iterable<Long>.
+    //
+    // We deduplicate the iterable here. If it contains multiple revision IDs that are NOT
+    // identical, we have an illegal state because we cannot determine which historical revision is
+    // authoritative at the watermark. In that case, we abort and require manual intervention.
     if (ids.size() != 1) {
       ImmutableSet<Long> dedupedIds = ImmutableSet.copyOf(ids);
       checkState(
@@ -351,22 +355,52 @@ public class RdePipeline implements Serializable {
           "Duplicate revision IDs detected for %s repo ID %s: %s",
           historyEntryClazz.getSimpleName(), repoId, ids);
     }
-    return loadResourceByHistoryEntryId(historyEntryClazz, repoId, ids.get(0));
+    return ids.getFirst();
   }
 
-  private <T extends HistoryEntry> EppResource loadResourceByHistoryEntryId(
-      Class<T> historyEntryClazz, String repoId, long revisionId) {
-    return tm().transact(
-            () ->
-                tm().loadByKey(
-                        VKey.create(historyEntryClazz, new HistoryEntryId(repoId, revisionId))))
-        .getResourceAtPointInTime()
-        .map(resource -> resource.cloneProjectedAtTime(watermark))
-        .get();
+  <E extends EppResource, H extends HistoryEntry>
+      ImmutableMap<String, E> loadResourcesByHistoryEntryIds(
+          Iterable<KV<String, Long>> repoAndRevisionIds,
+          Class<E> resourceClass,
+          Class<H> historyEntryClass) {
+    ImmutableList<KV<String, Long>> ids = ImmutableList.copyOf(repoAndRevisionIds);
+    if (ids.isEmpty()) {
+      return ImmutableMap.of();
+    }
+    ImmutableSet<String> expectedRepoIds = ids.stream().map(KV::getKey).collect(toImmutableSet());
+    ImmutableList<Long> revisionIds = ids.stream().map(KV::getValue).collect(toImmutableList());
+    ImmutableMap<String, E> result =
+        tm().transact(
+                () ->
+                    tm().query(
+                            String.format(
+                                "FROM %s WHERE revisionId IN (:revisionIds)",
+                                historyEntryClass.getSimpleName()),
+                            historyEntryClass)
+                        .setParameter("revisionIds", revisionIds)
+                        .getResultStream()
+                        .collect(
+                            toImmutableMap(
+                                HistoryEntry::getRepoId,
+                                entry ->
+                                    entry
+                                        .getResourceAtPointInTime()
+                                        .map(r -> r.cloneProjectedAtTime(watermark))
+                                        .map(resourceClass::cast)
+                                        .get())));
+    // Fail fast on items being missing unexpectedly
+    if (result.size() != expectedRepoIds.size()) {
+      throw new NoSuchElementException(
+          String.format(
+              "Expected to find the following %s history entries but they were missing: %s",
+              historyEntryClass.getSimpleName(),
+              Sets.difference(expectedRepoIds, result.keySet())));
+    }
+    return result;
   }
 
   /**
-   * Remove unreferenced resources by joining the (repoId, pendingDeposit) pair with the (repoId,
+   * Remove unreferenced hosts by joining the (repoId, pendingDeposit) pair with the (repoId,
    * revisionId) on the repoId.
    *
    * <p>The (repoId, pendingDeposit) pairs denote hosts that are referenced from a domain, that are
@@ -378,38 +412,30 @@ public class RdePipeline implements Serializable {
    * @return a pair of (repoId, ([pendingDeposit], [revisionId])) where neither the pendingDeposit
    *     nor the revisionId list is empty.
    */
-  private static PCollection<KV<String, CoGbkResult>> removeUnreferencedResource(
-      PCollection<KV<String, PendingDeposit>> referencedResources,
-      PCollection<KV<String, Long>> historyEntries,
-      Class<? extends EppResource> resourceClazz) {
-    String resourceName = resourceClazz.getSimpleName();
-    Class<? extends HistoryEntry> historyEntryClazz =
-        RESOURCE_TYPES_TO_HISTORY_TYPES.get(resourceClazz);
-    String historyEntryName = historyEntryClazz.getSimpleName();
-    Counter referencedResourceCounter = Metrics.counter("RDE", "Referenced" + resourceName);
-    return KeyedPCollectionTuple.of(PENDING_DEPOSIT, referencedResources)
-        .and(REVISION_ID, historyEntries)
+  private static PCollection<KV<String, CoGbkResult>> removeUnreferencedHost(
+      PCollection<KV<String, PendingDeposit>> referencedHosts,
+      PCollection<KV<String, Long>> hostHistories) {
+    Counter referencedHostCounter = Metrics.counter("RDE", "Referenced Host");
+    return KeyedPCollectionTuple.of(PENDING_DEPOSIT, referencedHosts)
+        .and(REVISION_ID, hostHistories)
+        .apply("Join PendingDeposit with HostHistory revision ID on Host", CoGroupByKey.create())
         .apply(
-            String.format(
-                "Join PendingDeposit with %s revision ID on %s", historyEntryName, resourceName),
-            CoGroupByKey.create())
-        .apply(
-            String.format("Remove unreferenced %s", resourceName),
+            "Remove unreferenced Host",
             Filter.by(
                 (KV<String, CoGbkResult> kv) -> {
                   boolean toInclude =
-                      // If a resource does not have corresponding pending deposit, it is not
-                      // referenced and should not be included.
+                      // If a host does not have corresponding pending deposit, it is not referenced
+                      // and should not be included.
                       kv.getValue().getAll(PENDING_DEPOSIT).iterator().hasNext()
-                          // If a resource does not have revision id (this should not happen, as
-                          // every referenced resource must be valid at watermark time, therefore
+                          // If a host does not have revision id (this should not happen, as
+                          // every referenced host must be valid at watermark time, therefore
                           // be embedded in a history entry valid at watermark time, otherwise
                           // the domain cannot reference it), there is no way for us to find the
-                          // history entry and load the embedded resource. So we ignore the resource
+                          // history entry and load the embedded host. So we ignore the host
                           // to keep the downstream process simple.
                           && kv.getValue().getAll(REVISION_ID).iterator().hasNext();
                   if (toInclude) {
-                    referencedResourceCounter.inc();
+                    referencedHostCounter.inc();
                   }
                   return toInclude;
                 }));
@@ -419,50 +445,65 @@ public class RdePipeline implements Serializable {
     Counter activeDomainCounter = Metrics.counter("RDE", "ActiveDomainBase");
     Counter domainFragmentCounter = Metrics.counter("RDE", "DomainFragment");
     Counter referencedHostCounter = Metrics.counter("RDE", "ReferencedHost");
-    return domainHistories.apply(
-        "Map DomainHistory to DepositFragment and emit referenced Host",
-        ParDo.of(
-                new DoFn<KV<String, Long>, KV<PendingDeposit, DepositFragment>>() {
-                  @ProcessElement
-                  public void processElement(
-                      @Element KV<String, Long> kv, MultiOutputReceiver receiver) {
-                    activeDomainCounter.inc();
-                    Domain domain =
-                        (Domain)
-                            loadResourceByHistoryEntryId(
-                                DomainHistory.class, kv.getKey(), kv.getValue());
-                    pendingDeposits.stream()
-                        .filter(pendingDeposit -> pendingDeposit.tld().equals(domain.getTld()))
-                        .forEach(
-                            pendingDeposit -> {
-                              // Domains are always deposited in both modes.
-                              domainFragmentCounter.inc();
-                              receiver
-                                  .get(DOMAIN_FRAGMENTS)
-                                  .output(
-                                      KV.of(
-                                          pendingDeposit,
-                                          marshaller.marshalDomain(domain, pendingDeposit.mode())));
-                              // Hosts are only deposited in RDE, not BRDA.
-                              if (pendingDeposit.mode() == RdeMode.FULL) {
-                                if (domain.getNsHosts() != null) {
-                                  referencedHostCounter.inc(domain.getNsHosts().size());
-                                  domain
-                                      .getNsHosts()
-                                      .forEach(
-                                          hostKey ->
-                                              receiver
-                                                  .get(REFERENCED_HOSTS)
-                                                  .output(
-                                                      KV.of(
-                                                          (String) hostKey.getKey(),
-                                                          pendingDeposit)));
-                                }
-                              }
-                            });
-                  }
-                })
-            .withOutputTags(DOMAIN_FRAGMENTS, TupleTagList.of(REFERENCED_HOSTS)));
+    int batchSize = options.getRdeHistoryEntryLoadBatchSize();
+    return domainHistories
+        .apply(
+            "Assign all domain histories a key of 0 so they can be batched",
+            WithKeys.<Integer, KV<String, Long>>of(0).withKeyType(integers()))
+        .apply(
+            "Group domain histories into batches",
+            GroupIntoBatches.<Integer, KV<String, Long>>ofSize(batchSize).withShardedKey())
+        .apply(
+            "Map DomainHistory to DepositFragment and emit referenced Host",
+            ParDo.of(
+                    new DoFn<
+                        KV<ShardedKey<Integer>, Iterable<KV<String, Long>>>,
+                        KV<PendingDeposit, DepositFragment>>() {
+                      @ProcessElement
+                      public void processElement(
+                          @Element KV<ShardedKey<Integer>, Iterable<KV<String, Long>>> element,
+                          MultiOutputReceiver receiver) {
+                        ImmutableMap<String, Domain> loadedDomains =
+                            loadResourcesByHistoryEntryIds(
+                                element.getValue(), Domain.class, DomainHistory.class);
+                        for (KV<String, Long> kv : element.getValue()) {
+                          Domain domain = loadedDomains.get(kv.getKey());
+                          activeDomainCounter.inc();
+                          pendingDeposits.stream()
+                              .filter(
+                                  pendingDeposit -> pendingDeposit.tld().equals(domain.getTld()))
+                              .forEach(
+                                  pendingDeposit -> {
+                                    // Domains are always deposited in both modes.
+                                    domainFragmentCounter.inc();
+                                    receiver
+                                        .get(DOMAIN_FRAGMENTS)
+                                        .output(
+                                            KV.of(
+                                                pendingDeposit,
+                                                marshaller.marshalDomain(
+                                                    domain, pendingDeposit.mode())));
+                                    // Hosts are only deposited in RDE, not BRDA.
+                                    if (pendingDeposit.mode() == RdeMode.FULL) {
+                                      if (domain.getNsHosts() != null) {
+                                        referencedHostCounter.inc(domain.getNsHosts().size());
+                                        domain
+                                            .getNsHosts()
+                                            .forEach(
+                                                hostKey ->
+                                                    receiver
+                                                        .get(REFERENCED_HOSTS)
+                                                        .output(
+                                                            KV.of(
+                                                                (String) hostKey.getKey(),
+                                                                pendingDeposit)));
+                                      }
+                                    }
+                                  });
+                        }
+                      }
+                    })
+                .withOutputTags(DOMAIN_FRAGMENTS, TupleTagList.of(REFERENCED_HOSTS)));
   }
 
   private PCollectionTuple processHostHistories(
@@ -471,45 +512,66 @@ public class RdePipeline implements Serializable {
     Counter subordinateHostCounter = Metrics.counter("RDE", "SubordinateHost");
     Counter externalHostCounter = Metrics.counter("RDE", "ExternalHost");
     Counter externalHostFragmentCounter = Metrics.counter("RDE", "ExternalHostFragment");
-    return removeUnreferencedResource(referencedHosts, hostHistories, Host.class)
+    int batchSize = options.getRdeHistoryEntryLoadBatchSize();
+    return removeUnreferencedHost(referencedHosts, hostHistories)
+        .apply(
+            "Assign all host histories a key of 0 so they can be batched",
+            WithKeys.<Integer, KV<String, CoGbkResult>>of(0).withKeyType(integers()))
+        .apply(
+            "Group referenced hosts into batches",
+            GroupIntoBatches.<Integer, KV<String, CoGbkResult>>ofSize(batchSize).withShardedKey())
         .apply(
             "Map external DomainResource to DepositFragment and process subordinate domains",
             ParDo.of(
-                    new DoFn<KV<String, CoGbkResult>, KV<PendingDeposit, DepositFragment>>() {
+                    new DoFn<
+                        KV<ShardedKey<Integer>, Iterable<KV<String, CoGbkResult>>>,
+                        KV<PendingDeposit, DepositFragment>>() {
                       @ProcessElement
                       public void processElement(
-                          @Element KV<String, CoGbkResult> kv, MultiOutputReceiver receiver) {
-                        Host host =
-                            (Host)
-                                loadResourceByHistoryEntryId(
-                                    HostHistory.class,
-                                    kv.getKey(),
-                                    kv.getValue().getAll(REVISION_ID));
-                        // When a host is subordinate, we need to find its superordinate domain and
-                        // include it in the deposit as well.
-                        if (host.isSubordinate()) {
-                          subordinateHostCounter.inc();
-                          receiver
-                              .get(SUPERORDINATE_DOMAINS)
-                              .output(
-                                  // The output are pairs of
-                                  // (superordinateDomainRepoId,
-                                  //   (subordinateHostRepoId, (pendingDeposit, revisionId))).
-                                  KV.of((String) host.getSuperordinateDomain().getKey(), kv));
-                        } else {
-                          externalHostCounter.inc();
-                          DepositFragment fragment = marshaller.marshalExternalHost(host);
-                          Streams.stream(kv.getValue().getAll(PENDING_DEPOSIT))
-                              // The same host could be used by multiple domains, therefore
-                              // matched to the same pending deposit multiple times.
-                              .distinct()
-                              .forEach(
-                                  pendingDeposit -> {
-                                    externalHostFragmentCounter.inc();
-                                    receiver
-                                        .get(EXTERNAL_HOST_FRAGMENTS)
-                                        .output(KV.of(pendingDeposit, fragment));
-                                  });
+                          @Element
+                              KV<ShardedKey<Integer>, Iterable<KV<String, CoGbkResult>>> element,
+                          MultiOutputReceiver receiver) {
+                        ImmutableSet<KV<String, Long>> hostKeys =
+                            Streams.stream(element.getValue())
+                                .map(
+                                    kv ->
+                                        KV.of(
+                                            kv.getKey(),
+                                            getSingleRevisionId(
+                                                HostHistory.class,
+                                                kv.getKey(),
+                                                kv.getValue().getAll(REVISION_ID))))
+                                .collect(toImmutableSet());
+                        ImmutableMap<String, Host> loadedHosts =
+                            loadResourcesByHistoryEntryIds(hostKeys, Host.class, HostHistory.class);
+                        for (KV<String, CoGbkResult> kv : element.getValue()) {
+                          Host host = loadedHosts.get(kv.getKey());
+                          // When a host is subordinate, we need to find its superordinate domain
+                          // and include it in the deposit as well.
+                          if (host.isSubordinate()) {
+                            subordinateHostCounter.inc();
+                            receiver
+                                .get(SUPERORDINATE_DOMAINS)
+                                .output(
+                                    // The output are pairs of
+                                    // (superordinateDomainRepoId,
+                                    //   (subordinateHostRepoId, (pendingDeposit, revisionId))).
+                                    KV.of((String) host.getSuperordinateDomain().getKey(), kv));
+                          } else {
+                            externalHostCounter.inc();
+                            DepositFragment fragment = marshaller.marshalExternalHost(host);
+                            Streams.stream(kv.getValue().getAll(PENDING_DEPOSIT))
+                                // The same host could be used by multiple domains, therefore
+                                // matched to the same pending deposit multiple times.
+                                .distinct()
+                                .forEach(
+                                    pendingDeposit -> {
+                                      externalHostFragmentCounter.inc();
+                                      receiver
+                                          .get(EXTERNAL_HOST_FRAGMENTS)
+                                          .output(KV.of(pendingDeposit, fragment));
+                                    });
+                          }
                         }
                       }
                     })
@@ -532,6 +594,7 @@ public class RdePipeline implements Serializable {
       PCollection<KV<String, Long>> domainHistories) {
     Counter subordinateHostFragmentCounter = Metrics.counter("RDE", "SubordinateHostFragment");
     Counter referencedSubordinateHostCounter = Metrics.counter("RDE", "ReferencedSubordinateHost");
+    int batchSize = options.getRdeHistoryEntryLoadBatchSize();
     return KeyedPCollectionTuple.of(HOST_TO_PENDING_DEPOSIT, superordinateDomains)
         .and(REVISION_ID, domainHistories)
         .apply("Join Host:PendingDeposits with DomainHistory on Domain", CoGroupByKey.create())
@@ -548,29 +611,58 @@ public class RdePipeline implements Serializable {
                   return toInclude;
                 }))
         .apply(
+            "Assign all subordinate hosts a key of 0 so they can be batched",
+            WithKeys.<Integer, KV<String, CoGbkResult>>of(0).withKeyType(integers()))
+        .apply(
+            "Group subordinate hosts into batches",
+            GroupIntoBatches.<Integer, KV<String, CoGbkResult>>ofSize(batchSize).withShardedKey())
+        .apply(
             "Map subordinate Host to DepositFragment",
-            FlatMapElements.into(
-                    kvs(
-                        TypeDescriptor.of(PendingDeposit.class),
-                        TypeDescriptor.of(DepositFragment.class)))
-                .via(
-                    (KV<String, CoGbkResult> kv) -> {
-                      Domain superordinateDomain =
-                          (Domain)
-                              loadResourceByHistoryEntryId(
-                                  DomainHistory.class,
-                                  kv.getKey(),
-                                  kv.getValue().getAll(REVISION_ID));
-                      ImmutableSet.Builder<KV<PendingDeposit, DepositFragment>> results =
-                          new ImmutableSet.Builder<>();
+            ParDo.of(
+                new DoFn<
+                    KV<ShardedKey<Integer>, Iterable<KV<String, CoGbkResult>>>,
+                    KV<PendingDeposit, DepositFragment>>() {
+                  @ProcessElement
+                  public void processElement(
+                      @Element KV<ShardedKey<Integer>, Iterable<KV<String, CoGbkResult>>> element,
+                      OutputReceiver<KV<PendingDeposit, DepositFragment>> receiver) {
+                    ImmutableSet<KV<String, Long>> domainKeys =
+                        Streams.stream(element.getValue())
+                            .map(
+                                kv ->
+                                    KV.of(
+                                        kv.getKey(),
+                                        getSingleRevisionId(
+                                            DomainHistory.class,
+                                            kv.getKey(),
+                                            kv.getValue().getAll(REVISION_ID))))
+                            .collect(toImmutableSet());
+                    ImmutableSet<KV<String, Long>> hostKeys =
+                        Streams.stream(element.getValue())
+                            .flatMap(
+                                kv ->
+                                    Streams.stream(kv.getValue().getAll(HOST_TO_PENDING_DEPOSIT))
+                                        .map(
+                                            hostToPendingDeposits ->
+                                                KV.of(
+                                                    hostToPendingDeposits.getKey(),
+                                                    getSingleRevisionId(
+                                                        HostHistory.class,
+                                                        hostToPendingDeposits.getKey(),
+                                                        hostToPendingDeposits
+                                                            .getValue()
+                                                            .getAll(REVISION_ID)))))
+                            .collect(toImmutableSet());
+                    ImmutableMap<String, Domain> loadedDomains =
+                        loadResourcesByHistoryEntryIds(
+                            domainKeys, Domain.class, DomainHistory.class);
+                    ImmutableMap<String, Host> loadedHosts =
+                        loadResourcesByHistoryEntryIds(hostKeys, Host.class, HostHistory.class);
+                    for (KV<String, CoGbkResult> kv : element.getValue()) {
+                      Domain superordinateDomain = loadedDomains.get(kv.getKey());
                       for (KV<String, CoGbkResult> hostToPendingDeposits :
                           kv.getValue().getAll(HOST_TO_PENDING_DEPOSIT)) {
-                        Host host =
-                            (Host)
-                                loadResourceByHistoryEntryId(
-                                    HostHistory.class,
-                                    hostToPendingDeposits.getKey(),
-                                    hostToPendingDeposits.getValue().getAll(REVISION_ID));
+                        Host host = loadedHosts.get(hostToPendingDeposits.getKey());
                         DepositFragment fragment =
                             marshaller.marshalSubordinateHost(host, superordinateDomain);
                         Streams.stream(hostToPendingDeposits.getValue().getAll(PENDING_DEPOSIT))
@@ -578,11 +670,12 @@ public class RdePipeline implements Serializable {
                             .forEach(
                                 pendingDeposit -> {
                                   subordinateHostFragmentCounter.inc();
-                                  results.add(KV.of(pendingDeposit, fragment));
+                                  receiver.output(KV.of(pendingDeposit, fragment));
                                 });
                       }
-                      return results.build();
-                    }));
+                    }
+                  }
+                }));
   }
 
   /**
